[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Circle.svg" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Zombie/Zombie 1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Zombie/Zombie 2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Zombie/Zombie 3.ogg" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 8.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -1.5
linear_accel_random = 0.1
scale = 4.0
scale_random = 1.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.32549, 0.0588235, 0.854902, 1 )
scale = Vector2( 0.24, 0.24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Hand1" type="Node2D" parent="."]
rotation = -0.523599

[node name="Sprite" type="Sprite" parent="Hand1"]
modulate = Color( 0.32549, 0.0588235, 0.854902, 1 )
position = Vector2( 38, 0 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 1 )

[node name="Hand2" type="Node2D" parent="."]
rotation = 0.523599

[node name="Sprite" type="Sprite" parent="Hand2"]
modulate = Color( 0.32549, 0.0588235, 0.854902, 1 )
position = Vector2( 38, 0 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 1 )

[node name="SoundZombie1" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 1, 0 )
stream = ExtResource( 3 )

[node name="SoundZombie2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="SoundZombie3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Blood" type="Particles2D" parent="."]
modulate = Color( 0.698039, 0.0666667, 0.0666667, 1 )
emitting = false
amount = 32
lifetime = 8.0
one_shot = true
speed_scale = 8.0
explosiveness = 1.0
randomness = 0.33
process_material = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Enemy_body_entered"]
